--- a/10_Shop_MultiProduct/Views/Product/Checkout.cshtml
+++ b/10_Shop_MultiProduct/Views/Product/Checkout.cshtml
@@ -55,7 +55,7 @@
                                 <input class="input form-control" type="text" name="" id="cMail">
                             </div>
                             <div class="col-sm-12">
-                                <label for="email_address_1" class="required mt-25">Địa chỉ (*)</label>
+                                <label for="email_address_1" class="required mt-25">Address (*)</label>
                                 <textarea class="input form-control" name="" id="cAddress"></textarea>
 
                             </div>
