--- a/10_Shop_MultiProduct/Views/Product/SearchAjax.cshtml
+++ b/10_Shop_MultiProduct/Views/Product/SearchAjax.cshtml
@@ -45,11 +45,11 @@
                         <div class="add_to_cart_form">
                             @if (item.IsInstock)
                             {
-                                <button onclick="Cart.addProduct(@item.Id,@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price),'@item.Images','@item.PrName') @Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" class="btn-cart">Mua hàng</button>
+                                <button onclick="Cart.addProduct(@item.Id,@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price),'@item.Images','@item.PrName')" class="btn-cart">Mua hàng</button>
                             }
                             else
                             {
-                                <button disabled onclick="Cart.addProduct(@item.Id,@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price),'@item.Images','@item.PrName') @Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" class="btn-cart">Mua hàng</button>
+                                <button disabled onclick="Cart.addProduct(@item.Id,@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price),'@item.Images','@item.PrName')" class="btn-cart">Mua hàng</button>
                             }
                         </div>
                         <a class="wishlist_btn" href="https://www.facebook.com/sharer/sharer.php?u=@currentUrl" target="_blank" title="Chia sẻ với bạn bè"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -64,5 +64,5 @@
 }
 else
 {
-    <div>Không tìm thấy sản phẩm</div>
+    <div>No product</div>
 }
