--- a/10_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/10_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -39,12 +39,13 @@
                                 </div>
                             </div>
                         }
+                        <div class="navigations">
+                            <div id="slider_prev_1547051873685" class="swiper_btn swiper_btn__prev"></div>
+                            <div id="pagination_1547051873685" class="swiper_pagination"></div>
+                            <div id="slider_next_1547051873685" class="swiper_btn swiper_btn__next"></div>
+                        </div>
                     }
-                    <div class="navigations">
-                        <div id="slider_prev_1547051873685" class="swiper_btn swiper_btn__prev"></div>
-                        <div id="pagination_1547051873685" class="swiper_pagination"></div>
-                        <div id="slider_next_1547051873685" class="swiper_btn swiper_btn__next"></div>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -54,14 +55,14 @@
                     <div class="col-xs-12 col_item item_2_1">
                         <div class="custom_content__item item_text button_position__">
                             <div class="item_text item_text__center">
-                                <h4 class="item_text__title">Chào mừng tới @commonInfo.Name</h4>
+                                <h4 class="item_text__title">WELCOME @commonInfo.Name</h4>
                                 <div class="item_text__content"><p>@commonInfo.Desc</p></div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xs-12 col_item ">
                         <div class="custom_content__item item_button button_position__center">
-                            <a class="btn custom_button button_position__center" href="/search">Xem tất cả sản phẩm</a>
+                            <a class="btn custom_button button_position__center" href="/search">All Product</a>
                         </div>
                     </div>
                 </div>
@@ -69,7 +70,7 @@
         </div>
         <div id="shopify-section-1546967523308" class="shopify-section section section_homepage section_featured-products">
             <div class="container">
-                <h2 class="section_heading">Thịnh hành</h2>
+                <h2 class="section_heading">Best sale</h2>
                 <div class="row product_listing__main">
                     @if (ViewData["BestsaleProduct"] != null)
                     {
@@ -109,9 +110,9 @@
                                                 <p class="product_price">
                                                     @if (item.IsSale)
                                                     {
-                                                    <span class="money money_sale" data-currency-usd="$33.00">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span>
+                                                    <span class="money money_sale" data-currency-usd="$33.00">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) $</span>
                                                     }
-                                                    <span class="money">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span>
+                                                    <span class="money">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) $</span>
                                                 </p>
                                                 <p class="product_color"></p>
                                             </div>
@@ -119,11 +120,11 @@
                                                 <div class="add_to_cart_form">
                                                     @if (item.IsInstock)
                                                     {
-                                                        <button onclick="Cart.addProduct(@item.Id,@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price),'@item.Images','@item.PrName') @Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" class="btn-cart">Mua hàng</button>
+                                                        <button onclick="Cart.addProduct(@item.Id,@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price),'@item.Images','@item.PrName')" class="btn-cart">Mua hàng</button>
                                                     }
                                                     else
                                                     {
-                                                        <button disabled onclick="Cart.addProduct(@item.Id,@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price),'@item.Images','@item.PrName') @Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" class="btn-cart">Mua hàng</button>
+                                                        <button disabled onclick="Cart.addProduct(@item.Id,@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price),'@item.Images','@item.PrName')" class="btn-cart">Mua hàng</button>
                                                     }
                                                 </div>
                                                 <a class="wishlist_btn" href="https://www.facebook.com/sharer/sharer.php?u=@currentUrl" target="_blank" title="Chia sẻ với bạn bè"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -177,79 +178,7 @@
                 }
             </div>
         </div>
-        <div id="shopify-section-1546967580528" class="shopify-section  section section_homepage section_featured-products">
-            <div class="container">
-                <h2 class="section_heading">Sản phẩm mới</h2>
-                <div class="row product_listing__main">
-                    @if (ViewData["newestProduct"] != null)
-                    {
-                        AnperoFrontend.WebService.SearchResult newestProduct = (AnperoFrontend.WebService.SearchResult)ViewData["newestProduct"];
-                        if (newestProduct != null && newestProduct.Item.Length > 0)
-                        {
-                            foreach (ProductItem item in newestProduct.Item)
-                            {
-                                <div class="col-xs-4 item_4_1 item_2_1">
-                                    <div class="product_item">
-                                        <div class="product_img">
-                                            <a class="img_change" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">
-                                                <img class="img__1" src="@item.Images" alt="@item.PrName">
-                                                @if (item.ImagesSlide != null && item.ImagesSlide.Count() > 0)
-                                                {
-                                                    <img class="img__2" src="@item.ImagesSlide[0]" alt="@item.PrName">
-                                                }
-                                                <span class="product_badge new">mới</span>
-                                                @if (item.IsSale)
-                                                {
-                                                    <span class="product_badge sale">sale</span>
-                                                }
-
-                                            </a>
-                                        </div>
-                                        <div class="product_info">
-                                            <p class="product_name">
-                                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">@item.PrName</a>
-                                            </p>
-                                            <p class="product_desc product_desc__short">
-                                                @item.ShortDesc
-                                            </p>
-                                            <p class="product_desc product_desc__long">
-                                                @item.ShortDesc
-                                            </p>
-                                            <div class="product_prop">
-                                                <p class="product_price">
-                                                    @if (item.IsSale)
-                                                    {
-                                                        <span class="money money_sale" data-currency-usd="$33.00">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span>
-                                                    }
-                                                    <span class="money">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span>
-                                                </p>
-                                                <p class="product_color"></p>
-                                            </div>
-                                            <div class="product_links">
-                                                <div class="add_to_cart_form">
-                                                    @if (item.IsInstock)
-                                                    {
-                                                        <button onclick="Cart.addProduct(@item.Id,@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price),'@item.Images','@item.PrName') @Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" class="btn-cart">Mua hàng</button>
-                                                    }
-                                                    else
-                                                    {
-                                                        <button disabled onclick="Cart.addProduct(@item.Id,@Convert.ToInt32(item.IsSale?item.SalePrice:item.Price),'@item.Images','@item.PrName') @Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" class="btn-cart">Mua hàng</button>
-                                                    }
-                                                </div>
-                                                <a class="wishlist_btn" href="https://www.facebook.com/sharer/sharer.php?u=@currentUrl" target="_blank" title="Chia sẻ với bạn bè"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                                                <a class="quick_view_btn_1" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="Quick view"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                        <div class="clearfix"></div>
-                                    </div>
-                                </div>
-                            }
-                        }
-                    }
-                </div>
-            </div>
-
-        </div>
+  
         <div id="shopify-section-1547200797889" class="shopify-section  section section_divider">
             <div class="divider_item container" style="padding-top: 22px;"></div>
             <div class="divider_item tablet_show container" style="padding-top: 22px;"></div>
@@ -264,10 +193,10 @@
                         <div class="col-xs-12 timer_item">
                             <div class="banner_wrap">
                                 <div class="timer_img img_placeholder__wrap" style="background-image: url(@ads2[0].ImagesUrl);">
-                                </div>
+                                </div>``
                                 <div class="banner_caption align_center text_align_center ">
                                     <div class="banner_text">
-                                        @ads2[0].Description
+                                        @Html.Raw(ads2[0].Description)
                                     </div>
                                 </div>
                             </div>
@@ -279,7 +208,7 @@
                                     <div class="banner_img img_placeholder__wrap" style="background-image: url(@ads2[1].ImagesUrl);"></div>
                                     <div class="banner_caption align_center text_align_center  ">
                                         <div class="banner_text">
-                                            @Html.Raw(ads2[1].Description)
+                                    @Html.Raw(ads2[1].Description)
                                         </div>
                                     </div>
                                 </div>
@@ -287,11 +216,9 @@
                         }
                     }
                 }
-
-
-
             </div>
-        </div><div id="shopify-section-1546967621042" class="shopify-section section section_homepage section_logo-list">
+        </div>
+        <div id="shopify-section-1546967621042" class="shopify-section section section_homepage section_logo-list">
             <div class="container">
                 <div class="row">
                     @if (ViewData["ads3"] != null)
