--- a/10_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/10_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 </head>
 <body class="template-index scheme_1">
     <div class="page_wrapper">
-        <div id="page_preloader__bg">
+        @*<div id="page_preloader__bg">
             <img id="page_preloader__img" src="/assets/loadingLogo.gif" />
         </div>
 
@@ -54,7 +54,7 @@
                 preloaderImg.classList.add("off");
             });
 
-        </script>
+        </script>*@
         @Html.Partial("_partial/_MainHeader_1")
         <div class="page_container">
             <div class="main_content ">
@@ -64,7 +64,6 @@
         <a id="back_top" href="#">
             <i class="fa fa-angle-up" aria-hidden="true"></i>
         </a>
-
     </div>
 
     <link href="/assets/animate.css" rel="stylesheet" />
@@ -73,8 +72,8 @@
         <link href="/assets/responsive.css" rel="stylesheet" type="text/css" media="all" />
         <link href="http://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&amp;subset=cyrillic" rel="stylesheet" type="text/css">S
     </noscript>
-    <script integrity="sha256-zVaxYSrW5T/7lblyARr1c7FjwxiRbBlq2neqGz51Uig=" defer="defer" src="/assets/js/express_buttons.js" crossorigin="anonymous"></script>
-    <script src="/assets/js/features.js" integrity="sha256-6HOSr+Kf4wcoL05qrRLLS8wq/v1rf+vwtw7f0xX5aEw=" defer="defer" crossorigin="anonymous"></script>    
+    @*<script integrity="sha256-zVaxYSrW5T/7lblyARr1c7FjwxiRbBlq2neqGz51Uig=" defer="defer" src="/assets/js/express_buttons.js" crossorigin="anonymous"></script>
+    <script src="/assets/js/features.js" integrity="sha256-6HOSr+Kf4wcoL05qrRLLS8wq/v1rf+vwtw7f0xX5aEw=" defer="defer" crossorigin="anonymous"></script>*@    
     <script id="sections-script" data-sections="index-slideshow-full-width,index-banners-countdown-custom,index-logo-list,header,footer" defer="defer" src="/assets/shop.js"></script>
     <h1 id="heading1" style="display:none;">
         @commonInfo.Desc
