--- a/10_Shop_MultiProduct/Views/Shared/product/_MenuAndAdsPartial.cshtml
+++ b/10_Shop_MultiProduct/Views/Shared/product/_MenuAndAdsPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="column col-xs-12 col-sm-3" id="left_column">
     <!-- block category -->
     <div class="block left-module">
-        <p class="title_block">Danh mục sản phẩm</p>
+        <p class="title_block">Category</p>
         <div class="block_content">
             <!-- layered -->
             @if (ViewData["commonInfo"] != null)
@@ -62,8 +62,8 @@
                                                 <span class="countdown-lastest" data-y="@item.SaleEndTime.Substring(0,4)" data-m="@item.SaleEndTime.Substring(4,2)" data-d="@item.SaleEndTime.Substring(6,2)" data-h="0" data-i="00" data-s="10"></span>
                                             </div>
                                             <div class="content_price">
-                                                <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) đ</span>
-                                                <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) đ</span>
+                                                <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString()) $</span>
+                                                <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString()) $</span>
                                             </div>
                                         </div>
                                         <div class="product-bottom">
@@ -91,8 +91,8 @@
                                             <span class="countdown-lastest" data-y="@saleProduct[0].SaleEndTime.Substring(0,4)" data-m="@saleProduct[0].SaleEndTime.Substring(4,2)" data-d="@saleProduct[0].SaleEndTime.Substring(6,2)" data-h="0" data-i="00" data-s="10"></span>
                                         </div>
                                         <div class="content_price">
-                                            <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(saleProduct[0].SalePrice.ToString()) đ</span>
-                                            <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(saleProduct[0].Price.ToString()) đ</span>
+                                            <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(saleProduct[0].SalePrice.ToString()) $</span>
+                                            <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(saleProduct[0].Price.ToString()) $</span>
                                         </div>
                                     </div>
                                     <div class="product-bottom">
