--- a/10_Shop_MultiProduct/Views/Shared/product/_productDetail.cshtml
+++ b/10_Shop_MultiProduct/Views/Shared/product/_productDetail.cshtml
@@ -57,7 +57,7 @@
                         }
                     </div>
                     <div class="info-orther">
-                        <p>Mã sản phẩm: #@item.Id</p>
+                        <p>Product ID: #@item.Id</p>
                         <p>
                             Trạng thái:
                             @if (item.IsInstock)
@@ -114,7 +114,7 @@
                 <div class="product-tab">
                     <ul class="nav-tab">
                         <li class="active">
-                            <a aria-expanded="false" data-toggle="tab" href="#product-detail">Thông tin chi tiết</a>
+                            <a aria-expanded="false" data-toggle="tab" href="#product-detail">Detail</a>
                         </li>
                     </ul>
                     <div class="tab-container">
@@ -125,69 +125,7 @@
                 </div>
             }
 
-            <!-- ./tab product -->
-            <!-- box product -->
-            <div class="page-product-box">
-                <h3 class="heading">Sản phẩm liên quan</h3>
-                <ul class="product-list">
-                    @if (ViewData["relateProduct"] != null)
-                {
-                    AnperoFrontend.WebService.SearchResult relateProduct = (AnperoFrontend.WebService.SearchResult)ViewData["relateProduct"];
-                    if (relateProduct.Item != null && relateProduct.Item.Length > 0)
-                    {
-                        foreach (var items in relateProduct.Item)
-                        {
-                                <li class="col-sx-12 col-sm-3">
-                                    <div class="product-container">
-                                        <div class="left-block">
-                                            <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, @item.Id)">
-                                                <img class="img-responsive" alt="@item.PrName" src="@items.Images" />
-                                                @if (item.IsSale)
-                                                {
-                                                    <div class="price-percent-reduction2">giảm @Anpero.StringHelpper.ConVertToMoneyFormatInt((item.Price - item.SalePrice).ToString())</div>
-                                                }
-                                            </a>
-                                            <div class="quick-view">
-                                                <a title="Add to my wishlist" class="heart" href="#"></a>
-                                                <a title="Add to compare" class="compare" href="#"></a>
-                                                <a title="Quick view" class="search" href="#"></a>
-                                            </div>
-                                            <div class="add-to-cart">
-                                                <a title="Add to Cart" href="#add">Đặt mua</a>
-                                            </div>
-                                        </div>
-                                        <div class="right-block">
-                                            <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName, @item.Id)">@item.PrName</a></h5>
-                                            <div class="product-star">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-half-o"></i>
-                                            </div>
-                                            <div class="content_price">
-                                                @if (item.IsSale)
-                                                {
-                                                    <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice.ToString())</span>
-                                                    <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString())</span>
-                                                }
-                                                else
-                                                {
-                                                    <span class="price product-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price.ToString())</span>
-                                                }
-
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                            }
-                        }
-                    }
-
-                </ul>
-            </div>
-            <!-- ./box product -->
-
+       
         </div>
         <!-- Product -->
     </div>
