--- a/10_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/10_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -73,8 +73,8 @@
         <link href="/assets/responsive.css" rel="stylesheet" type="text/css" media="all" />
         <link href="http://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&amp;subset=cyrillic" rel="stylesheet" type="text/css">S
     </noscript>
-    <script integrity="sha256-zVaxYSrW5T/7lblyARr1c7FjwxiRbBlq2neqGz51Uig=" defer="defer" src="/assets/js/express_buttons.js" crossorigin="anonymous"></script>
-    <script src="/assets/js/features.js" integrity="sha256-6HOSr+Kf4wcoL05qrRLLS8wq/v1rf+vwtw7f0xX5aEw=" defer="defer" crossorigin="anonymous"></script>    
+    <script  defer="defer" src="/assets/js/express_buttons.js" crossorigin="anonymous"></script>
+    <script src="/assets/js/features.js"  defer="defer" crossorigin="anonymous"></script>    
     <script id="sections-script" data-sections="index-slideshow-full-width,index-banners-countdown-custom,index-logo-list,header,footer" defer="defer" src="/assets/shop.js"></script>
     <h1 id="heading1" style="display:none;">
         @commonInfo.Desc
